--- a/app/src/main/res/anim/fade_out.xml
+++ b/app/src/main/res/anim/fade_out.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
-    <translate xmlns:android="http://schemas.android.com/apk/res/android"
-        android:fromXDelta="300"
-        android:toXDelta="0"
-        android:duration="200"
+    <alpha
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:duration="500"
+        android:fromAlpha="1.0"
+        android:toAlpha="0.0"
         android:interpolator="@android:interpolator/accelerate_decelerate" />
 </set>
